--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "express": "3.1.1",
         "rpi-gpio": "0.0.4",
         "socket.io": "0.9.14",
-        "moment": "2.0.0"
+        "moment": "2.0.0",
+        "showdown": "0.3.1"
     },
     "version" : "1.0.0"
 }
