--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "rpi-gpio": "0.0.4",
         "socket.io": "0.9.14",
         "moment": "2.0.0",
-        "showdown": "0.3.1"
+        "pagedown": "1.1.0"
     },
     "version" : "1.0.0"
 }
