--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-    "name" : "zlapser",
-    "description" : "Controlling a DSLR with the Rasperry PI",
-    "homepage" : "http://www.ziax.dk",
-    "dependencies" : {
-        "express": "3.1.1",
-        "rpi-gpio": "0.0.4",
-        "socket.io": "0.9.14",
-        "moment": "2.0.0",
-        "pagedown": "1.1.0"
-    },
-    "version" : "1.0.0"
+  "name": "zlapser",
+  "description": "Controlling a DSLR with the Rasperry PI",
+  "homepage": "http://www.ziax.dk",
+  "dependencies": {
+    "express": "3.1.1",
+    "rpi-gpio": "0.0.4",
+    "socket.io": "0.9.14",
+    "moment": "2.0.0",
+    "pagedown": "1.1.0"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-jshint": "~0.1.1",
+    "grunt-contrib-nodeunit": "~0.1.2",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-htmlmin": "~0.1.3"
+  },
+  "version": "1.0.0"
 }
