--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-nodeunit": "~0.1.2",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-htmlmin": "~0.1.3"
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-contrib-jshint": "~0.4.3"
   },
   "version": "1.0.0"
 }
