--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-nodeunit": "~0.1.2",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-jshint": "~0.4.3"
+    "grunt-contrib-jshint": "~0.4.3",
+    "grunt-contrib-clean": "~0.4.1"
   },
-  "version": "1.0.0"
+  "engines": {
+      "node": "0.10.5",
+      "npm": "1.2.18"
+  },
+  "version": "0.9.0"
 }
