--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "homepage": "http://www.ziax.dk",
   "dependencies": {
     "express": "3.1.1",
-    "rpi-gpio": "0.0.4",
-    "gpio": "0.2.4",
+    "rpio": "0.0.4",
     "socket.io": "0.9.14",
     "moment": "2.0.0",
     "pagedown": "1.1.0"
