--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "express": "3.1.1",
     "socket.io": "0.9.14",
     "moment": "2.0.0",
-    "pagedown": "1.1.0"
+    "pagedown": "1.1.0",
+    "onoff": "0.1.3"
   },
   "devDependencies": {
-    "rpio": "0.0.4",
     "grunt": "~0.4.1",
     "grunt-contrib-nodeunit": "~0.1.2",
     "grunt-contrib-uglify": "~0.2.0",
