--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "express": "3.1.1",
     "socket.io": "0.9.14",
     "moment": "2.0.0",
-    "pagedown": "1.1.0",
-    "onoff": "0.1.3"
+    "pagedown": "1.1.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
