--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "socket.io": "0.9.14",
     "moment": "2.0.0",
     "pagedown": "1.1.0",
-    "onoff": "0.1.3"
+    "rpi-gpio": "0.0.4"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
